updating css render issue bc of overflowing toc

--- a/header-footer.css
+++ b/header-footer.css
@@ -14,6 +14,14 @@
   }
 }
 
+.toc ul {
+    list-style: none;
+    padding-left: 0;
+    overflow-x: clip; /* fixes issue with render because of long table of contents. source: https://github.com/rstudio/pagedown/issues/314 */ 
+    margin-right: 0%;
+}
+
+
 body {
   font-family: "Helvetica", sans-serif;
   margin: 1in;
